<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NCLExample</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
	<string name="connect_nymi">Initialize NCL for Nymi Band</string>
	<string name="connect_nymuator">Initialize NCL for Nymulator</string>
	<string name="nymuator_address_hint">Enter Nymulator IP address</string>
	<string name="provision">Provision Nymi</string>
	<string name="validation">Validate Nymi</string>
	<string name="disconnect">Disconnect Nymi</string>
	<string name="ecgcontrol">Start ECG</string>
	<string name="ecgStart">Start ECG</string>
	<string name="ecgStop">Stop ECG</string>
</resources>
