<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingTop="@dimen/activity_vertical_margin"
				android:paddingBottom="@dimen/activity_vertical_margin"
				tools:context="com.bionym.nclexample.MainActivity"
				android:orientation="vertical">

	<LinearLayout
		android:id="@+id/selectLibContainer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<RadioGroup
			android:id="@+id/selectLib"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<RadioButton
				android:id="@+id/connectNymy"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/connect_nymi"
				android:checked="true"/>

			<RadioButton
				android:id="@+id/connectNymulator"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/connect_nymuator"/>

		</RadioGroup>

		<EditText
			android:id="@+id/nymulatorIp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="10dip"
			android:layout_marginEnd="10dip"
			android:paddingStart="5dip"
			android:paddingEnd="5dip"
			android:hint="@string/nymuator_address_hint"
			android:visibility="gone"/>

	</LinearLayout>

	<Button
		android:id="@+id/provision"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/provision"/>

	<Button
		android:id="@+id/validation"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:enabled="false"
		android:text="@string/validation"/>
	
	<Button
		android:id="@+id/disconnect"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:enabled="false"
		android:text="@string/disconnect"/>
</LinearLayout>
